--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "firebaseui": "^3.5.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-materialize": "^2.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
