--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http": "0.0.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.18",
+    "react-materialize": "^2.6.0",
     "socket.io": "^2.2.0"
   }
 }
