--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "if-env": "^1.0.4",
+    "install": "^0.12.2",
     "mongoose": "^5.4.18",
     "socket.io": "^2.2.0"
   }
