--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "books-search",
+  "name": "dad-overflow",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
