--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "axios": "^0.18.0",
     "firebase": "^5.8.6",
     "firebaseui": "^3.5.2",
+    "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-materialize": "^2.6.0",
+    "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
