--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.18",
     "react-materialize": "^2.6.0",
+    "react-moment": "^0.8.4",
     "socket.io": "^2.2.0"
   }
 }
