--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.3",
+    "firebase-admin": "^7.2.0",
     "http": "0.0.0",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
